# hackharvard

./: .gitignore  README.md
backend/: .gitignore  README.md  download_and_upload.sh  poll_status.sh  pyproject.toml  requirements.txt  run_server.py
backend/src/app/: kiri_client.py  main.py  mock_config.py  models.py  service.py  store.py  utils.py
backend/src/app/api/v1/: router.py
backend/src/app/api/v1/endpoints/: api.py  eleven.py  gemini.py  image_processing.py  kiri.py  skybox.py  supabase.py
backend/src/app/core/: config.py
backend/src/app/utils/: elevenlabs.py  gemini.py  image_processing.py  supabase.py
backend/src/app/utils/prompts/: generate_prompt.txt
backend/src/app/utils_modules/: elevenlabs.py  gemini.py  supabase.py
frontend/Cultured/: ContentView.swift  CulturedApp.swift
frontend/Cultured.xcodeproj/: project.pbxproj
frontend/Cultured.xcodeproj/xcshareddata/xcschemes/: Cultured.xcscheme
frontend/Cultured/Assets.xcassets/testImage.imageset/: Contents.json  testImage.jpg.json
frontend/Cultured/Assets.xcassets/testImage2.imageset/: Contents.json
frontend/Cultured/Components/: BottomTabBar.swift  Post.swift
frontend/Cultured/Config/: supabase.plist
frontend/Cultured/Features/Createpost/: CreateView.swift  (+2 more)
frontend/Cultured/Models/: Colors.swift  Experience.swift  Models.swift
frontend/Cultured/RealityKit/: ARViewContainer.swift
frontend/Cultured/Utilities/: Extensions.swift  auth.swift  createPost.swift
frontend/Cultured/Views/: ContentView.swift  ExperienceView.swift  LandingPageView.swift  ProfileView.swift  TestView.swift
(+11 files in other folders)
